overflow fix

--- a/src/pages/studentDashboard/studentDashboard.module.css
+++ b/src/pages/studentDashboard/studentDashboard.module.css
@@ -153,72 +153,86 @@
     display: inline-block; 
 }
 @media (max-width: 825px){
-    .main{
-        height: auto;
-        background-image: linear-gradient(rgba(0, 0, 0, 0.65), rgba(0, 0, 0, 0.65)),
-        url("./images/bg-mobile.webp");
-        background-size: cover, 122%;
-        background-position: right center;
-    }
-    .main h1{
-        padding-top: 90px;
-        padding-left: 26px;
-        font-size: 30px;
-    }
-    .main p{
-        width: 90%;
-        padding-left: 26px;
-        padding-bottom: 187px;
-    }
-    .mainCard{
-        display: grid;
-        grid-template-columns: auto auto;
-        grid-template-rows: auto;
-        overflow-x: auto;
-        padding-bottom: 20px;
-    }
-    .subCard{
-        flex-direction: row;
+  .main{
+    height: auto;
+    background-image: linear-gradient(rgba(0, 0, 0, 0.65), rgba(0, 0, 0, 0.65)),
+    url("./images/bg-mobile.webp");
+    background-size: cover, 122%;
+    background-position: right center;
+  }
+  .main h1{
+    padding-top: 90px;
+    padding-left: 26px;
+    font-size: 30px;
+  }
+  .main p{
+    width: 90%;
+    padding-left: 26px;
+    padding-bottom: 187px;
+  }
+  .mainCard{
+    display: grid;
+    grid-template-columns: auto auto;
+    grid-template-rows: auto;
+    overflow-x: auto;
+    padding-bottom: 20px;
+  }
+  .subCard{
+    flex-direction: row;
     }
     .boxContainer {
-        width: 286px;
-        height: 154px;
+      width: 286px;
+      height: 154px;
     }
     .boxContainer img{
-        max-width: 40.5%;
+      max-width: 40.5%;
     }
     .boxContainer p{
         font-size: 12.5px;
         padding: 15px 0px 22px 11px;
-    }
-
-    .mainDiv{
+      }
+      
+      .mainDiv{
         height: 9px;
         width: 138px;
         margin-left: 10px;
         margin-bottom: 18px;
-    }
-    .leftSpan {
+      }
+      .leftSpan {
         font-size: 11px;
-    }
-    .next div{
+      }
+      .next div{
         display: grid;
         grid-template-rows: auto auto;
         grid-template-columns: auto auto;
         column-gap: 15px;
-    }
-    .next div p{
+      }
+      .next div p{
         width: 175px;
         padding: 10px 0px;
-    }
-    .next img{
+      }
+      .next img{
         display: none;
-    }
-    .coursesDiv{
+      }
+      .coursesDiv{
         margin-left: 30px;
         justify-content: start;
         gap: 30px;
         overflow-x: auto;
         padding-bottom: 20px;
+      }
     }
-}
+    @media (max-width: 395px){
+      .next div p{
+        width: 145px;
+        padding: 10px 0px;
+      }  
+      
+    }
+    @media (max-width: 335px){
+      .next div p{
+        width: 115px;
+        padding: 10px 0px;
+      }  
+
+    }
